fix(switch): minimize the layout shifts in `readonly` mode
When the switch becomes readonly, it renders
`limel-dynamic-label` which has a slightly different UI.
Also since the Host becomes empty and then gets an
element which has some height, it would flicker during
this process.

--- a/src/components/switch/switch.scss
+++ b/src/components/switch/switch.scss
@@ -67,6 +67,11 @@ $scale-factor: 0.8;
     --mdc-switch-disabled-unselected-handle-color: rgb(var(--contrast-1000));
 }
 
+:host(limel-switch),
+limel-dynamic-label {
+    min-height: 1.625rem;
+}
+
 .mdc-switch {
     margin-right: functions.pxToRem(8);
     &:hover {
